--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<title>Priyanka PRA</title>
 		<script src="/js/jq.js"></script>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+			rel="stylesheet" />
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -60,12 +65,18 @@
 					Empowering Working Women & Entrepreneurs in Personal
 					Relationships
 				</p>
-				<a data-aos="fade-right" data-aos-delay="300" href="/#contact" id="contactBtn">Join Now</a>
+				<a
+					data-aos="fade-right"
+					data-aos-delay="300"
+					href="/#contact"
+					id="contactBtn"
+					>Join Now</a
+				>
 			</div>
 		</div>
 		<div data-aos="fade-right" id="about">
 			<h2>Get to <span class="underLine">know</span> us!</h2>
-			<div  data-aos="fade-right">
+			<div data-aos="fade-right">
 				<h3>Our Mission</h3>
 				<p>
 					At Priyanka PRA, our mission is to empower individuals to
@@ -74,7 +85,7 @@
 					needs and goals.
 				</p>
 			</div>
-			<div  data-aos="fade-right">
+			<div data-aos="fade-right">
 				<h3>Our Vision</h3>
 				<p>
 					Our vision at Priyanka PRA is to cultivate a world where
@@ -83,8 +94,14 @@
 				</p>
 			</div>
 			<a data-aos="fade-right" href="#contact">Learn More</a>
-			<img data-aos="fade-right" src="/img/wordCloud.webp" alt="wordArt" id="wordArt" />
-			<h2 data-aos="fade-right" id="services">What <span class="underLine">we do</span> ;)</h2>
+			<img
+				data-aos="fade-right"
+				src="/img/wordCloud.webp"
+				alt="wordArt"
+				id="wordArt" />
+			<h2 data-aos="fade-right" id="services">
+				What <span class="underLine">we do</span> ;)
+			</h2>
 			<div data-aos="fade-right">
 				<h3>Personal Relationship Advisory</h3>
 				<p>
