--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
 				</p>
 			</details>
 		</div>
-		<div data-aos="fade-right" id="contact">
+		<div id="contact" data-aos="fade-right" class="visme_d" data-title="Contact Us Contact Form" data-url="pvm6z6jv-contact-us-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="60637"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+		<!-- <div data-aos="fade-right" id="contact">
 			<h2>Contact</h2>
 			<p>Get in Touch with Us</p>
 			<div>
@@ -244,7 +245,7 @@
 					</form>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<footer>
 			<p>© 2024 Priyanka PRA. All Rights Reserved.</p>
 		</footer>
